--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - lib/assets/iconfinder_Hand-cleaning-healthy-wash-water.png
+    - lib/assets/iconfinder_Dishes-hand-wash-virus-cleaning.png
+
+  #   - images/a_dot_ham.jpeg // iconfinder_Dishes-hand-wash-virus-cleaning
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
